--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="strings.js"></script>
     <script src="arrays.js"></script>
     <script src="objects.js"></script>
+    <script src="arrayobjects.js"></script>
   </body>
 </html>
