--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <script src="arrays.js"></script>
     <script src="objects.js"></script>
     <script src="arrayobjects.js"></script>
+    <script src="loops.js"></script>
   </body>
 </html>
