--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <script src="objects.js"></script>
     <script src="arrayobjects.js"></script>
     <script src="loops.js"></script>
+    <script src="conditionals.js"></script>
   </body>
 </html>
