changed all the files due to errors

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <script src="arrayobjects.js"></script>
     <script src="loops.js"></script>
     <script src="conditionals.js"></script>
+    <script src="ternaryop.js" type="application/javascript"></script>
   </body>
 </html>
