added a file with a function

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <script src="loops.js"></script>
     <script src="conditionals.js"></script>
     <script src="ternaryop.js" type="application/javascript"></script>
+    <script src="function.js"></script>
   </body>
 </html>
