--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <script src="conditionals.js"></script>
     <script src="ternaryop.js" type="application/javascript"></script>
     <script src="function.js"></script>
+    <script src="constructor.js"></script>
   </body>
 </html>
